--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet">
     <title>OMMA- Receitas</title>
 </head>
-
+<container>
 <body>
     <header>
         <img class="logotop" src="/img-omma/logo.png" alt="logo"> </div>
@@ -25,7 +25,7 @@
     <main>
         <div class="receitarisoto">
             <section>
-                <h1>Risoto de Abóbora</h1>
+                <h1>Risoto de Abobora</h1>
                 <picture> <img src="/img-omma/risoto.png" alt="risoto"> </picture><br>
 
                 <span>fácil</span>
@@ -118,5 +118,6 @@
     <span>© 2022 omma - Todos os direitos são de vocês</span>
 
 </footer>
+</container>
 
 </html>
