--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;700&display=swap" rel="stylesheet">
+    <link href="styles2.css" rel="stylesheet">
     <title>OMMA- Receitas</title>
 </head>
-<container>
+
 <body>
     <header>
-        <img class="logotop" src="/img-omma/logo.png" alt="logo"> </div>
+        <a href="#"><img class="logotop" src="./img-omma/logo.png" alt="logo"></a> </div>
     </header>
 
     <nav>
@@ -21,12 +24,11 @@
             <li><a href="#" target="blank">Contato</a></li>
         </ul>
     </nav>
-
-    <main>
-        <div class="receitarisoto">
+    <div class="flexcontainer">
+        <main>
             <section>
-                <h1>Risoto de Abobora</h1>
-                <picture> <img src="/img-omma/risoto.png" alt="risoto"> </picture><br>
+                <h1>risoto de abobora</h1>
+                <picture> <img src="./img-omma/risoto.png" alt="risoto"> </picture><br>
 
                 <span>fácil</span>
                 <span>serve 4 pessoas</span>
@@ -63,61 +65,77 @@
                         </li>
                         <li>Salsinha picada a gosto
                         </li>
-                        <li>Pimenta a gosto</li>
+                        <li>Pimenta a gosto</li><br><br><br><br>
                     </ul>
-                    <p><b>Vídeo</b></p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Mxc3RQE4yAg"
+                    <p><b>vídeo</b></p>
+                    <iframe width="580" height="315" src="https://www.youtube.com/embed/Mxc3RQE4yAg"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
+
+
+                    <article>
+
+
+                        <h3>modo de Preparo</h3>
+
+                        <p> Descasque a abóbora e corte-a em cubinhos pequenos. Reserve. Coloque o azeite em uma panela
+                            funda e
+                            acrescente a cebola e o alho picados e leve ao fogo baixo até que a cebola e o alho murchem,
+                            mexendo sem
+                            parar. Adicione a cebolinha verde e a abóbora picada e deixe refogar por uns 3 minutos,
+                            mexendo
+                            sempre.
+                            Adicione o vinho branco e deixe cozinhar por uns 2 minutos. Adicione 2 xícaras de chá de
+                            água
+                            fervente e os
+                            tabletes de caldo de galinha e deixe cozinhar para que a abóbora fique ligeiramente macia,
+                            por
+                            uns 10
+                            minutos em fogo baixo. Aumente o fogo e acrescente o arroz arbóreo. Mexa bem e deixe
+                            levantar
+                            fervura.
+                            Acrescente as ervas finas, o gengibre e a folha de louro. Diminua a chama do fogão e sempre
+                            mexendo vá
+                            acrescentando água fervente quanto necessário. Leva em média de 15 a 20 minutos para
+                            adquirir o
+                            ponto
+                            cremoso. Quanto estive al dente acrescente a manteiga e o queijo parmesão ralado.
+                            Experimente o
+                            sal e
+                            acrescente pimenta a gosto. Desligue o fogo e tampe a panela. Deixe descansar por uns 5
+                            minutos.
+                            Sirva
+                            regado com queijo parmesão ralado e salsinha picada.
+                        </p>
+
+                    </article>
+
             </section>
-        </div>
-        <article class="mododepreparo">
+        </main>
+        <aside>
+            <h2><b>Receitas Relacionadas</b></h2>
+            <div class="cardrelacionadas">
+                <a href=""><img src="./img-omma/moqueca.png" alt="Panela de Moqueca">
+                <p>Moqueca</p></a>
+            </div><br>
+            <div class="cardrelacionadas">
+                <img src="./img-omma/bolo-banana.png" alt="Fatia de bolo de banana">
+                <p>Bolo de Banana</p>
+            </div><br>
+            <div class="cardrelacionadas">
+                <img src="./img-omma/tabule.png" alt="Tabule bem colorido">
+                <p>Tabule Tradicional</p>
+            </div>
+        </aside>
+    </div>
 
+    <footer>
+        <img src="./img-omma/logo.png" alt="logo">
+        <p>© 2022 omma - Todos os direitos são de vocês</p>
 
-            <h3>Modo de Preparo</h3>
-
-            Descasque a abóbora e corte-a em cubinhos pequenos. Reserve. Coloque o azeite em uma panela funda e
-            acrescente a cebola e o alho picados e leve ao fogo baixo até que a cebola e o alho murchem, mexendo sem
-            parar. Adicione a cebolinha verde e a abóbora picada e deixe refogar por uns 3 minutos, mexendo sempre.
-            Adicione o vinho branco e deixe cozinhar por uns 2 minutos. Adicione 2 xícaras de chá de água fervente e os
-            tabletes de caldo de galinha e deixe cozinhar para que a abóbora fique ligeiramente macia, por uns 10
-            minutos em fogo baixo. Aumente o fogo e acrescente o arroz arbóreo. Mexa bem e deixe levantar fervura.
-            Acrescente as ervas finas, o gengibre e a folha de louro. Diminua a chama do fogão e sempre mexendo vá
-            acrescentando água fervente quanto necessário. Leva em média de 15 a 20 minutos para adquirir o ponto
-            cremoso. Quanto estive al dente acrescente a manteiga e o queijo parmesão ralado. Experimente o sal e
-            acrescente pimenta a gosto. Desligue o fogo e tampe a panela. Deixe descansar por uns 5 minutos. Sirva
-            regado com queijo parmesão ralado e salsinha picada.
-
-
-        </article>
-
-    </main>
-    <aside>
-        <h2>Receitas Relacionadas</h2>
-        <div class="cardrelacionadas">
-            <img src="/img-omma/moqueca.png" alt="Panela de Moqueca">
-            <p>Moqueca</p>
-        </div>
-        <div class="cardrelacionadas">
-            <img src="/img-omma/bolo-banana.png" alt="Fatia de bolo de banana">
-            <p>Bolo de Banana</p>
-        </div>
-        <div class="cardrelacionadas">
-            <img src="/img-omma/tabule.png" alt="Tabule bem colorido">
-            <p>Tabule Tradicional</p>
-        </div>
-
-
-
-    </aside>
-
+    </footer>
 </body>
-<footer>
-    <img src="/img-omma/logo.png" alt="logo">
-    <span>© 2022 omma - Todos os direitos são de vocês</span>
 
-</footer>
-</container>
 
 </html>
