--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <li>Pimenta a gosto</li><br><br><br><br>
                     </ul>
                     <p><b>vídeo</b></p>
-                    <iframe width="580" height="315" src="https://www.youtube.com/embed/Mxc3RQE4yAg"
+                    <iframe width="580" height="317" src="https://www.youtube.com/embed/Mxc3RQE4yAg"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -77,7 +77,7 @@
                     <article>
 
 
-                        <h3>modo de Preparo</h3>
+                        <h3>modo de preparo</h3>
 
                         <p> Descasque a abóbora e corte-a em cubinhos pequenos. Reserve. Coloque o azeite em uma panela
                             funda e
@@ -114,25 +114,25 @@
             </section>
         </main>
         <aside>
-            <h2><b>Receitas Relacionadas</b></h2>
+            <h2>receitas relacionadas</h2>
             <div class="cardrelacionadas">
                 <a href=""><img src="./img-omma/moqueca.png" alt="Panela de Moqueca">
-                <p>Moqueca</p></a>
-            </div><br>
+                <p>moqueca</p></a>
+            </div>
             <div class="cardrelacionadas">
-                <img src="./img-omma/bolo-banana.png" alt="Fatia de bolo de banana">
-                <p>Bolo de Banana</p>
-            </div><br>
+                <a href=""><img src="./img-omma/bolo-banana.png" alt="Fatia de bolo de banana">
+                <p>bolo de banana</p>
+            </div></a>
             <div class="cardrelacionadas">
-                <img src="./img-omma/tabule.png" alt="Tabule bem colorido">
-                <p>Tabule Tradicional</p>
+                <a href=""><img src="./img-omma/tabule.png" alt="Tabule bem colorido">
+                <p>tabule tradicional</p></a>
             </div>
         </aside>
     </div>
 
     <footer>
         <img src="./img-omma/logo.png" alt="logo">
-        <p>© 2022 omma - Todos os direitos são de vocês</p>
+        <p>© 2022 omma - Todos os direitos reservados</p>
 
     </footer>
 </body>
