--- a/risotoabobora.html
+++ b/risotoabobora.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;700&display=swap" rel="stylesheet">
     <link href="styles2.css" rel="stylesheet">
-    <title>OMMA- Receitas</title>
+    <title>OMMA-Risoto de Abobora</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <nav>
         <ul>
             <li><a href="#" target="blank">Início</a></li>
-            <li><a href="#" target="blank">Receitas</a></li>
+            <li><a href="./receitas.html" target="blank">Receitas</a></li>
             <li><a href="#" target="blank">Contato</a></li>
         </ul>
     </nav>
