--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <nav>
         <ul>
-            <li><a href="#" target="blank">Início</a></li>
-            <li><a href="./receitas.html" target="blank">Receitas</a></li>
-            <li><a href="#" target="blank">Contato</a></li>
+            <li><a href="#">Início</a></li>
+            <li><a href="./receitas.html">Receitas</a></li>
+            <li><a href="./contato.html">Contato</a></li>
         </ul>
     </nav>
     <div class="flexcontainer">
