--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--  fontes--><link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--  fontes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,7 +45,6 @@
             </p>
         </div>
         <form action="" method="post">
-            
             <fieldset>
                 <legend>Contato</legend>
                 <div>
